# march-madness-portfolio-engine

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
configs/: source_registry.yaml
configs/crawl_profiles/: news-archive-dynamic.json  official-athletics-markdown.json
configs/model/: training_profile.yaml
configs/portfolio/: contest_profiles.yaml  payout_profiles.yaml  (+2 more)
docs/: VERSION_HISTORY.md  current-release-state.md  data-requirements.md  model-architecture-and-evolution.md  publishing-guide.md  source-catalog.md  submission-baseline.md  tooling-and-crawl-strategy.md
march_madness_2026/: __init__.py  __main__.py  ablation.py  calibration.py  cli.py  config.py  demo.py  engine.py  game_model.py  gpu.py  historical.py  models.py  payout.py  portfolio.py  public_field.py  reporting.py  scoring.py  tournament.py
scripts/: apply_bpi_calibration.py  apply_contrarian_value.py  apply_real_ratings.py  autobracket.py  autobracket_gpu.py  autobracket_parallel.py  autobracket_v10.py  backtest_v10.py  build_bracket_portfolio.py  build_historical_dataset.py  build_v10_portfolio.py  prepare_public_repo.sh  run_cloudflare_crawl.sh  run_pipeline.py  train_v10_game_model.py  train_v10_public_field.py  verify_project_setup.py
tests/: test_autobracket_v10.py  test_bracket_portfolio_engine.py  test_calibration.py  test_cli_entrypoints.py  test_engine.py  test_payout.py  test_scoring.py  test_v10_4_data.py  test_v10_engine.py  test_v10_foundation.py  test_v10_release_contract.py  test_v10_reporting.py  test_v10_vast_run.py
(+50 files in other folders)
